cargo-features = ["edition2024"]
[package]
name = "chipper"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { version = "1.5.1" }
colog = "1.3.0"
dashmap = "5.5.3"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
owo-colors = "4.0.0"
rand = { version = "0.9.0-alpha.1", features = ["nightly", "simd_support"] }
serde = { version = "1.0.203", features = ["unstable"] }
serde-binary = "0.5.0"
serenity = { version = "0.12.2", features = ["full"] }
sled = "0.34.7"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
typed-sled = "0.2.3"
